--- a/MobileHub/RoutePlanner/2 RoutePlanner.csproj
+++ b/MobileHub/RoutePlanner/2 RoutePlanner.csproj
@@ -45,7 +45,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoutePlanerManager.cs" />
     <Compile Include="test.cs" />
-    <None Include="RoutePlanerManager.xcsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
@@ -64,6 +63,9 @@
       <Project>{69aac7af-af35-46c6-b347-8fac4f41d6f5}</Project>
       <Name>1 Services</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
